--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-packpas",
   "description": "Gulp 4.0 Base Packager for Angular 1.x developments",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
     "event-stream": "^3.3.4",
     "fancy-log": "^1.3.2",
     "fs-extra": "^5.0.0",
-    "gulp": "^3.9.1",
+    "gulp": "gulpjs/gulp.git#4.0",
     "gulp-angular-filesort": "^1.2.1",
     "gulp-angular-templatecache": "^2.2.0",
     "gulp-concat": "^2.6.1",
@@ -33,7 +33,6 @@
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
-    "gulp-watch": "^5.0.0",
     "gulp-webserver": "^0.9.1",
     "jasmine-core": "^3.1.0",
     "karma": "^2.0.0",
